// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop when showGetInTouch is false renders the expected classes 1`] = `
.c4 {
  position: relative;
  display: inline-block;
}

.c4 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c4 svg:hover path,
.c4 svg:active path,
.c4 svg:focus path {
  fill: #68737d;
}

.c4 svg path {
  fill: #87929d;
}

.c1 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c2 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c3 {
  margin-top: 0.5714285714285714rem;
}

<div>
  <div>
    <footer
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="text__c-txt___Uzv-G range__c-range___1aYaS "
        >
          <label
            class="c2 text__c-txt__label___3wMPZ "
            data-garden-container-id="containers.field"
            data-garden-container-version="1.3.3"
            data-garden-id="forms.text_label"
            data-garden-version="7.1.10"
            for="1val-field_1.3.3--input"
            id="1val-field_1.3.3--label"
          >
            Type your question here...
          </label>
          <textarea
            aria-describedby="1val-field_1.3.3--hint"
            aria-invalid="false"
            aria-labelledby="1val-field_1.3.3--label"
            class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
            data-garden-id="forms.textarea"
            data-garden-version="7.1.10"
            data-testid="message-field"
            id="1val-field_1.3.3--input"
            name="answerBotInputValue"
            placeholder="Type your question here..."
            rows="3"
          >
            desktop message
          </textarea>
        </div>
      </div>
      <div
        class="c3"
      >
        <a
          class="c4"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`desktop when showGetInTouch is true renders the expected classes 1`] = `
.c8 {
  position: relative;
  display: inline-block;
}

.c8 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c8 svg:hover path,
.c8 svg:active path,
.c8 svg:focus path {
  fill: #68737d;
}

.c8 svg path {
  fill: #87929d;
}

.c5 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c6 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4.c4.c4 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c4.c4.c4:not([disabled]):hover,
.c4.c4.c4:not([disabled]):active,
.c4.c4.c4:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c2 {
  height: 2.2857142857142856rem;
  margin-bottom: 0.7142857142857143rem;
}

.c3.c3.c3.c3 {
  height: 2.2857142857142856rem !important;
  line-height: 1 !important;
  font-size: 1rem !important;
  right: 0;
  position: absolute;
}

.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c7 {
  margin-top: 0.5714285714285714rem;
}

.c1 {
  position: relative;
}

<div>
  <div>
    <footer
      class="c0"
    >
      <div
        class="c1"
        data-testid="slide-appear-container"
        role="presentation"
        style="opacity: 0; bottom: -10px;"
      >
        <div
          class="c2"
        >
          <button
            class="c3 c4 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            Get in touch
          </button>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="text__c-txt___Uzv-G range__c-range___1aYaS "
        >
          <label
            class="c6 text__c-txt__label___3wMPZ "
            data-garden-container-id="containers.field"
            data-garden-container-version="1.3.3"
            data-garden-id="forms.text_label"
            data-garden-version="7.1.10"
            for="3val-field_1.3.3--input"
            id="3val-field_1.3.3--label"
          >
            Type your question here...
          </label>
          <textarea
            aria-describedby="3val-field_1.3.3--hint"
            aria-invalid="false"
            aria-labelledby="3val-field_1.3.3--label"
            class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
            data-garden-id="forms.textarea"
            data-garden-version="7.1.10"
            data-testid="message-field"
            id="3val-field_1.3.3--input"
            name="answerBotInputValue"
            placeholder="Type your question here..."
            rows="3"
          >
            desktop message
          </textarea>
        </div>
      </div>
      <div
        class="c7"
      >
        <a
          class="c8"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`mobile when showGetInTouch is false renders the expected classes 1`] = `
.c2 {
  position: relative;
  display: inline-block;
}

.c2 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c2 svg:hover path,
.c2 svg:active path,
.c2 svg:focus path {
  fill: #68737d;
}

.c2 svg path {
  fill: #87929d;
}

.c5 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c6 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 -0.07142857142857142rem 0 0 #d8dcde !important;
}

.c7 {
  height: 3.0714285714285716rem !important;
  border-radius: 50% !important;
  margin: 0 0.2857142857142857rem !important;
}

.c7 svg {
  padding: 0.5714285714285714rem 0.5rem 0.5714285714285714rem 0.6428571428571429rem;
  box-sizing: content-box;
  min-width: 1rem;
  min-height: 1rem;
  width: 1rem;
  height: 1rem;
}

.c7 svg g {
  fill: #87929d !important;
}

.c7 svg path {
  fill: #87929d !important;
}

.c7:hover,
.c7:active,
.c7:focus {
  cursor: pointer;
  background: #e9ebed;
}

.c7:hover svg > g,
.c7:active svg > g,
.c7:focus svg > g {
  fill: #49545c !important;
}

.c0 {
  padding: 0;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c1 {
  margin-top: 0.5714285714285714rem;
}

<div>
  <div>
    <footer
      class="c0"
    >
      <div
        class="c1"
      >
        <a
          class="c2"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="c6 text__c-txt__label___3wMPZ "
                data-garden-container-id="containers.field"
                data-garden-container-version="1.3.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.1.10"
                for="4val-field_1.3.3--input"
                id="4val-field_1.3.3--label"
              >
                Type your question here...
              </label>
              <textarea
                aria-describedby="4val-field_1.3.3--hint"
                aria-invalid="false"
                aria-labelledby="4val-field_1.3.3--label"
                class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                data-garden-id="forms.textarea"
                data-garden-version="7.1.10"
                data-testid="message-field"
                id="4val-field_1.3.3--input"
                name="answerBotInputValue"
                placeholder="Type your question here..."
                rows="1"
              >
                mobile message
              </textarea>
            </div>
          </div>
        </div>
        <button
          aria-label="Send"
          class="index__c-btn--icon___1Yl4x c7 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <span
            class="container Icon--sendChat"
            data-testid="Icon--sendChat"
            type="Icon--sendChat"
          >
            <svg
              aria-hidden="true"
              realfilename="widget-icon_sendChat.svg"
            />
          </span>
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`mobile when showGetInTouch is true renders the expected classes 1`] = `
.c6 {
  position: relative;
  display: inline-block;
}

.c6 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c6 svg:hover path,
.c6 svg:active path,
.c6 svg:focus path {
  fill: #68737d;
}

.c6 svg path {
  fill: #87929d;
}

.c9 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c10 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 -0.07142857142857142rem 0 0 #d8dcde !important;
}

.c11 {
  height: 3.0714285714285716rem !important;
  border-radius: 50% !important;
  margin: 0 0.2857142857142857rem !important;
}

.c11 svg {
  padding: 0.5714285714285714rem 0.5rem 0.5714285714285714rem 0.6428571428571429rem;
  box-sizing: content-box;
  min-width: 1rem;
  min-height: 1rem;
  width: 1rem;
  height: 1rem;
}

.c11 svg g {
  fill: #87929d !important;
}

.c11 svg path {
  fill: #87929d !important;
}

.c11:hover,
.c11:active,
.c11:focus {
  cursor: pointer;
  background: #e9ebed;
}

.c11:hover svg > g,
.c11:active svg > g,
.c11:focus svg > g {
  fill: #49545c !important;
}

.c4.c4.c4 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c4.c4.c4:not([disabled]):hover,
.c4.c4.c4:not([disabled]):active,
.c4.c4.c4:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c2 {
  height: 2.2857142857142856rem;
  margin-bottom: 0.7142857142857143rem;
}

.c3.c3.c3.c3 {
  height: 2.2857142857142856rem !important;
  line-height: 1 !important;
  font-size: 1rem !important;
  right: 0;
  position: absolute;
}

.c0 {
  padding: 0;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c5 {
  margin-top: 0.5714285714285714rem;
}

.c1 {
  position: relative;
}

<div>
  <div>
    <footer
      class="c0"
    >
      <div
        class="c1"
        data-testid="slide-appear-container"
        role="presentation"
        style="opacity: 0; bottom: -10px;"
      >
        <div
          class="c2"
        >
          <button
            class="c3 c4 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            Get in touch
          </button>
        </div>
      </div>
      <div
        class="c5"
      >
        <a
          class="c6"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="c10 text__c-txt__label___3wMPZ "
                data-garden-container-id="containers.field"
                data-garden-container-version="1.3.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.1.10"
                for="6val-field_1.3.3--input"
                id="6val-field_1.3.3--label"
              >
                Type your question here...
              </label>
              <textarea
                aria-describedby="6val-field_1.3.3--hint"
                aria-invalid="false"
                aria-labelledby="6val-field_1.3.3--label"
                class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                data-garden-id="forms.textarea"
                data-garden-version="7.1.10"
                data-testid="message-field"
                id="6val-field_1.3.3--input"
                name="answerBotInputValue"
                placeholder="Type your question here..."
                rows="1"
              >
                mobile message
              </textarea>
            </div>
          </div>
        </div>
        <button
          aria-label="Send"
          class="index__c-btn--icon___1Yl4x c11 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <span
            class="container Icon--sendChat"
            data-testid="Icon--sendChat"
            type="Icon--sendChat"
          >
            <svg
              aria-hidden="true"
              realfilename="widget-icon_sendChat.svg"
            />
          </span>
        </button>
      </div>
    </footer>
  </div>
</div>
`;
